test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/02-policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: foreach-patchstrategicmerge-context-policy
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      foreach:
      - context:
        - configMap:
            name: foreach-patchstrategicmerge-context-configmap
            namespace: foreach-patchstrategicmerge-context-ns
          name: dictionary
        list: request.object.spec.containers
        patchStrategicMerge:
          spec:
            containers:
            - image: '{{ dictionary.data.image }}'
              name: '{{ element.name }}'
    name: resolve-image-containers
    preconditions:
      all:
      - key: '{{request.operation}}'
        operator: AllIn
        value:
        - CREATE
        - UPDATE
  validationFailureAction: Audit
