test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/03-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foreach-patchstrategicmerge-context-pod
  namespace: foreach-patchstrategicmerge-context-ns
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: busybox
    name: foreach-patchstrategicmerge-context-container
