test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-patchstrategicmerge-context-ns
