test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  image: nginx
kind: ConfigMap
metadata:
  name: foreach-patchstrategicmerge-context-configmap
  namespace: foreach-patchstrategicmerge-context-ns
