test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/02-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: foreach-patchstrategicmerge-context-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
