test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/03-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foreach-patchstrategicmerge-context-pod
  namespace: foreach-patchstrategicmerge-context-ns
spec:
  containers:
  - image: nginx
    name: foreach-patchstrategicmerge-context-container
