test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foreach-patchstrategicmerge-context-pod
  namespace: foreach-patchstrategicmerge-context-ns
spec:
  containers:
  - image: nginx
    name: foreach-patchstrategicmerge-context-container
