test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-context/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: foreach-patchstrategicmerge-context
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: foreach-patchstrategicmerge-context-policy
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
